gcc/testsuite/gcc.dg/noncompile/incomplete-4.c
void foo()
{
  enum E e; /* { dg-error "storage size" } */
}
